added github repository link

--- a/index.html
+++ b/index.html
@@ -56,13 +56,11 @@
               Independent of your preference, this Superhero Emporium showcases some heroes and their enemies,
               the villains. Take a journey as you come to know them better!
             </p>
-          <!-- </div> -->
-          <!-- <div class="center_h_left"> -->
-
-
-          <!-- </div> -->
-
       </div>
   </body>
-  <footer>Footer</footer>
+  <footer>
+    <a href="https://github.com/darrow97/creativeproject1.git">
+      Click here for access to the Git Repository
+    </a>
+  </footer>
 </html>
