--- a/pages/marvel.html
+++ b/pages/marvel.html
@@ -92,5 +92,9 @@
       </div>
     </div>
   </body>
-  <footer>Footer</footer>
+  <footer>
+    <a href="https://github.com/darrow97/creativeproject1.git">
+      Click here for access to the Git Repository
+    </a>
+  </footer>
 </html>
